Improvements in Fault Tolerance via Circuit breaker
